# momentum-system

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_VISUAL.html  BACKTEST_GUIDE.md  BUILD_SUMMARY.md  DATA_TRANSFORMATIONS.md  Dockerfile  GO_LIVE.md  INSPECTION_ROADMAP.md  PHASE1_IMPLEMENTATION.md  PHASE2_PREVIEW.md  QUICK_REFERENCE.txt  README.md  README_ARCHITECTURE_REDESIGN.md  RUNBOOK.md  SYSTEM_FLOW.txt  __init__.py  backfill_history.py  backfill_journal.py  backtest_cli.py  catalyst_eval.py  comprehensive_backtest.py  config.py  dashboard_api.py  diagnose_entries.py  docker-compose.yml  eod_replay.py  eod_replay.sh  fetch_minute_bars.py  journal.sh  learn_params.py  milestone3_verify.py  momentum  momentum_cli.py  nightly_tune.py  nightly_tune.sh  package-lock.json  pyproject.toml  requirements.txt  (+8 more)
alpaca_paper/: __init__.py  client.py  execution.py  settings.py  sync.py
api/: main.py
core/: contracts.py  telemetry.py  validation.py
deploy/: README.md
docs/: CONSOLIDATION_PLAN.md  IGNITION_SETUP_SCOPE.md
grafana/: README.md  docker-compose.yml
models/: base.py
research/: __init__.py  attribution.py  labeler.py  multi_schema.py  premarket_eval.py  query.py  schema.py  sip_backfill.py
runtime/: __init__.py  exit_manager.py  flatten.py  halt_guard.py  market_calendar.py  notifier.py  triggers.py  watcher.py
schwab/: __init__.py  settings.py
storage/: __init__.py  db.py  db_pg.py  event_schema.py  event_store.py  journal_backfill.py  pg_schema.sql  projections.py  replay.py  schema.py
strategy/: __init__.py  exits.py  models.py  universe.py
(+141 files in other folders)
